--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Симуляція дилеми вязня</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="manual-simulation/style.css">
 </head>
 <body>
 <div class="container">
@@ -40,6 +40,6 @@
     </div>
 </div>
 
-<script src="manual%20simulation%20/script.js"></script>
+<script src="manual-simulation/script.js"></script>
 </body>
 </html>
